[package]
name = "tupiter"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tupiter-proc-macro = { path = "./tupiter-proc-macro" }

[workspace]
members = ["tupiter-proc-macro"]
