[package]
name = "tupiter"
version = "0.1.1"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/tupiter"
documentation = "https://docs.rs/tupiter"
description = "iterating over tuples"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tupiter-proc-macro = { path = "./tupiter-proc-macro", version = "0.1.0" }

[workspace]
members = ["tupiter-proc-macro"]
