[package]
name = "tupiter-proc-macro"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
description = "tupiter internal proc macro helper"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
